--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="./logo.svg" />
     <title>Text Player</title>
+    <base href="/" />
     <script type="module" src="./frontend.tsx" async></script>
   </head>
   <body>
