--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="./logo.svg" />
-    <title>Text Player</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Text Player - Instantly Turn Text into Presentations</title>
+    <meta name="title" content="Text Player - Instantly Turn Text into Presentations" />
+    <meta name="description" content="Transform your text into engaging presentations instantly. No design skills needed—just type and play." />
+    <meta name="keywords" content="text to presentation, slide generator, typography, presentation tool, text player" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://text-player.vercel.app/" />
+    <meta property="og:title" content="Text Player - Instantly Turn Text into Presentations" />
+    <meta property="og:description" content="Transform your text into engaging presentations instantly. No design skills needed—just type and play." />
+    <meta property="og:image" content="./og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://text-player.vercel.app/" />
+    <meta property="twitter:title" content="Text Player - Instantly Turn Text into Presentations" />
+    <meta property="twitter:description" content="Transform your text into engaging presentations instantly. No design skills needed—just type and play." />
+    <meta property="twitter:image" content="./og-image.png" />
+
+    <link rel="icon" type="image/png" href="./favicon.png" />
     <base href="/" />
     <script type="module" src="./frontend.tsx" async></script>
   </head>
